[package]
name = "cashengine"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hocon = "0.9.0"
flate2 = "1.0"
tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["blocking"] }
bytecheck = { version = "0.6.12", default-features = false }
rkyv = { version = "0.7.45", features = ["validation", "strict"] }
faster-hex = "0.10.0"
memmap2 = "0.5.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "env-filter"] }
strum = "0.27"
strum_macros = "0.27"