[package]
name = "cashengine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
flate2 = "1.0"
tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["blocking"] }
memmap2 = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "env-filter"] }
core_affinity = "0.8.3"